Increase zIndex to prevent bug with overlap

--- a/src/pages/LendPage/components/MarketOverviewInfo/MarketOverviewInfo.module.less
+++ b/src/pages/LendPage/components/MarketOverviewInfo/MarketOverviewInfo.module.less
@@ -33,6 +33,7 @@
   display: flex;
   align-items: center;
   gap: 8px;
+  z-index: 1;
 
   svg {
     width: 16px;
