--- a/src/pages/OffersPage/components/OffersTabContent/components/OfferCard/OfferCard.module.less
+++ b/src/pages/OffersPage/components/OffersTabContent/components/OfferCard/OfferCard.module.less
@@ -106,6 +106,7 @@
   display: flex;
   align-items: center;
   gap: 8px;
+  z-index: 1;
 
   svg {
     width: 16px;
